[gd_scene load_steps=7 format=3 uid="uid://cq20ql700thk3"]

[ext_resource type="Script" path="res://systems/voxel_interaction/voxel_interaction.gd" id="1_v6na1"]
[ext_resource type="Script" path="res://systems/item/item.gd" id="2_d4p47"]
[ext_resource type="Script" path="res://systems/inventory/inventory.gd" id="3_agb6i"]
[ext_resource type="AudioStream" uid="uid://dp6am4i6lqjcd" path="res://assets/sfx/zapsplat_human_male_burp_very_short_85760.mp3" id="4_w3dxa"]
[ext_resource type="AudioStream" uid="uid://d1d3cffnup3po" path="res://assets/sfx/impactSoft_heavy_000.ogg" id="5_rdjfd"]
[ext_resource type="AudioStream" uid="uid://8xuo1ml778xv" path="res://assets/sfx/blocks/grass/footstep_grass_000.ogg" id="6_sgj0s"]

[node name="VoxelInteraction" type="Node"]
unique_name_in_owner = true
script = ExtResource("1_v6na1")

[node name="BreakTimer" type="Timer" parent="."]

[node name="Item" type="Node" parent="."]
script = ExtResource("2_d4p47")

[node name="Inventory" type="Node" parent="."]
script = ExtResource("3_agb6i")

[node name="Audio" type="Node" parent="."]

[node name="EatSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_w3dxa")

[node name="PlaceBlock" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_rdjfd")

[node name="GrassFootsteps" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_sgj0s")
